--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,8 +4,17 @@
     box-sizing: border-box;
 }
 
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
 :root{
-    --header-height: 13.6rem;
+    --header-height: 17.7vh;
+    /* Main colors */
+    --main-color-font: #FFFFFF;
+    --main-bckg-color: #000104;
+    --secundary-bckg-color: #001A52;
 }
 
 html{
@@ -14,18 +23,24 @@ html{
 }
 
 body{
-    background: #000104;
-    background: linear-gradient(90deg,#000104 0%, #001A52 100%);
+    color: var(--main-color-font);
+    background: var(--main-bckg-color);
+    background: linear-gradient(90deg,var(--main-bckg-color) 0%, var(--secundary-bckg-color) 100%);
 }
 
 .hidden{
     display: none;
 }
 
+/* Common height of some containers */
+header, section{
+    height: calc(100vh - var(--header-height));
+}
+
 /* Header, nav */
 header{
-    display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     background: #07192A;
     background: linear-gradient(90deg,#07192A 0%, #0E3E83 100%);
@@ -33,6 +48,8 @@ header{
     height: var(--header-height);
     padding: 2.8rem 7.8rem;
     width: 100%;
+    position: fixed;
+    top: 0;
 }
 
 .logo{
@@ -55,6 +72,7 @@ header{
 nav{
     width: 100%;
     height: 5.8rem;
+    display: none;
 }
 
 nav ul{
@@ -70,7 +88,7 @@ nav ul li{
     border-radius: 2.5rem;
     cursor: pointer;
     border: 0.3rem solid transparent;
-    transition: border 0.3s ease-in-out;
+    transition: border 0.6s ease-in-out;
 }
 
 nav ul li:hover{
@@ -78,7 +96,128 @@ nav ul li:hover{
 }
 
 .mobile-menu-icon{
-    font-size: 2rem;
+    font-size: 3rem;
     text-align: center;
     cursor: pointer;
+}
+
+.mobile-menu{
+    display: none;
+}
+
+
+/* Section Home */
+#home{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4rem 5.2rem;
+    margin-top: var(--header-height);
+}
+
+.home-main-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3.5rem;
+}
+
+.home-img{
+    border: 1.2rem solid #C1C1C1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    width: 28rem;
+    height: 28rem;
+    background-image: url('../img/psychologist-group01.png');
+    background-size: 137%;
+    background-position: 56% 10%;
+    background-origin: content-box;
+}
+
+.home-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.home-content h1{
+    font-size: 4rem;
+    width: 19.1rem;
+    line-height: 3.8rem;
+}
+
+.home-content p{
+    font-size: 1.8rem;
+    line-height: 2.5rem;
+    text-align: justify;
+}
+
+.home-content ul li{
+    list-style: none;
+    font-size: 1.6rem;
+}
+
+@media screen and (min-width: 576px){
+    .home-content{
+        width: 85%;
+    }
+
+}
+
+@media screen and (min-width: 768px){
+    .home-img{
+        width: 35rem;
+        height: 35rem;
+    }
+}
+
+@media screen and (min-width: 1080px){
+    nav{
+        display: block;
+    }
+
+    .mobile-menu-icon{
+        display: none;
+    }
+
+    .home-main-container{
+        flex-direction: row;
+    }
+
+    .home-img{
+        width: 44rem;
+        height: 44rem;
+    }
+
+    .home-content{
+        width: 50rem;
+    }
+
+    .home-content h1{
+        font-size: 8.5rem;
+        line-height: 7.6rem;
+    }
+
+    .home-content p{
+        font-size: 2.8rem;
+        line-height: 3.4rem;
+    }
+
+    .home-content ul li{
+        font-size: 2rem;
+    }
+}
+
+@media screen and (min-width: 1200px){
+    nav{
+        width: 92.6rem;
+    }
+
+    .home-main-container{
+        justify-content: space-between;
+        gap: 11.4rem;
+    }
 }
