--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -34,14 +34,20 @@ body{
 
 /* Common height of every section containers */
 section{
-    /* height: calc(100vh - var(--header-height)); */
     height: 100vh;
+    display: flex;
+    padding-top: calc(var(--header-height) + 3rem);
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 5rem;
+    padding-right: 5rem;
 }
 
-section{
+/* section{
     margin-top: var(--header-height);
     padding: 4rem 5.2rem;
-}
+} */
 
 
 /* Common styles of img div's */
@@ -109,7 +115,7 @@ nav ul{
 
 }
 
-nav ul li{
+nav ul li, .mobile-menu-content ul li{
     list-style: none;
     font-size: 2rem;
     padding: 0.8rem 1.6rem;
@@ -123,6 +129,7 @@ nav ul li:hover{
     border: 0.3rem solid #546A85;
 }
 
+/* Mobile menu */
 .mobile-menu-icon{
     font-size: 3rem;
     text-align: center;
@@ -130,8 +137,32 @@ nav ul li:hover{
 }
 
 .mobile-menu{
+    display: flex;
+    position: relative;
+}
+
+.mobile-menu-content{
+    position: absolute;
+    top: 3rem;
+    right: 0;
+    background-color: #546A85;
+    width: 22rem;
     display: none;
 }
+
+.mobile-menu:hover .mobile-menu-content{
+    display: block;
+}
+
+.mobile-menu-content ul li{
+    transition: background-color 0.4s ease-in-out;
+    border-radius: 0;
+}
+
+.mobile-menu-content ul li:hover{
+    background-color: #1D3358;
+}
+
 
 /* Common container for every section */
 .section-main-container{
@@ -143,11 +174,11 @@ nav ul li:hover{
 
 
 /* Section Home */
-#home{
+/* #home{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
-}
+} */
 
 .home-img{
     background-image: url('../img/psychologist-group01.png');
@@ -272,7 +303,7 @@ nav ul li:hover{
 
 /* Key Differentiators section */
 #key-differentiators{
-    padding-top: 12rem;
+    /* padding-top: 12rem; */
 }
 
 .key-differentiators-content{
@@ -299,12 +330,12 @@ nav ul li:hover{
 
 /* Contact section */
 #contact .section-main-container{
-    padding-top: 12rem;
+    /* padding-top: 15rem; */
 }
 
 .contact-container{
-    width: 30.8rem;
-    height: 25.9rem;
+    width: 27rem;
+    height: 22.7rem;
     background-image: url('../img/note.png');
     background-size: contain;
     background-repeat: no-repeat;
@@ -326,7 +357,7 @@ nav ul li:hover{
     font-size: 1.6rem;
     color: #000;
     padding: 2rem;
-    line-height: 2rem;
+    line-height: 1.8rem;
     text-align: center;
 }
 
@@ -336,8 +367,8 @@ nav ul li:hover{
 }
 
 .brands-logos img{
-    width: 4.3rem;
-    height: 4.3rem;
+    width: 3.8rem;
+    height: 3.8rem;
 }
 
 
@@ -367,9 +398,9 @@ nav ul li:hover{
 
 @media screen and (min-width: 768px){
     /* Home section */
-    #home .section-main-container{
+    /* #home .section-main-container{
         margin-top: 12rem;
-    }
+    } */
 
     .home-img,
     .about-us-img{
@@ -413,6 +444,35 @@ nav ul li:hover{
         grid-column-end: 5;
         grid-row-start: 3;
         grid-row-end: 4;
+    }
+
+    /* Contact section */
+    #contact .section-main-container{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 5rem;
+        height: 35rem;
+    }
+
+    #contact .section-main-container h1{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        font-size: 2.8rem;
+    }
+
+    #contact .section-main-container .contact-container:nth-child(2){
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+
+    #contact .section-main-container .contact-container:nth-child(3){
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 3;
     }
 }
 
@@ -496,7 +556,7 @@ nav ul li:hover{
 
     /* Skills section */
     #skills .section-main-container{
-        padding-top: 12rem;
+        /* padding-top: 12rem; */
         grid-template-columns: 3fr 1fr 1fr;
         grid-template-rows: repeat(6, 1fr);
         width: 100rem;
@@ -557,8 +617,23 @@ nav ul li:hover{
     }
 
     /* Key differentiators section */
+    #key-differentiators{
+        /* padding-top: 15rem; */
+    }
+
     .key-differentiators-content{
         max-width: 90rem;
+    }
+
+    /* Contact section */
+    #contact{
+        display: flex;
+        justify-content: center;
+    }
+
+    #contact .section-main-container{
+        width: 76rem;
+        column-gap: 14rem;
     }
 }
 
